# Twister2SVM

./: .travis.yml  Makefile  Makefile.am  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
code/: Makefile  Makefile.am  Makefile.in  run.c
scripts/: run.sh
src/: Makefile  main.c
