#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(Twister2SVM, 1.0.0, vibhatha@gmail.com)
AM_INIT_AUTOMAKE(Twister2SVM, 1.0.0)
AC_CONFIG_SRCDIR([code/run.c])
# AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# AC_CONFIG_FILES([Makefile code/Makefile])
AC_OUTPUT(Makefile code/Makefile)
